# filemanager

./: Pipfile  README.md  build.sh  fm.py  fm.spec  pyproject.toml  test.py
