[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-filemanager-name"
version = "0.1.0"
description = "A file manager written in Python"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "urwid",
]

[project.scripts]
your-filemanager = "your_package.main:main"
